# leak-detection-sample

./: .gitignore  README.md  config.py  detect_leak.py  pyproject.toml  requirements.txt
configs/: camera.yaml  config.yaml  detector_config.yaml
