[project]
name = "leak-detection-demo"
version = "0.1.0"
description = ""
authors = [{ name = "Harry Tung", email = "harry@groundlight.ai" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "framegrab>=0.10.0",
    "groundlight>=0.22.3",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "configs", "images", "output"]
